# superkube

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
deploy/install/: install-linux.sh  install-macos.sh
deploy/launchd/: dev.superkube.server.plist
deploy/systemd/: superkube-node.service  superkube-server.service  superkube.env.example
migrations/: 001_initial.sql  002_namespaces.sql  003_events.sql  004_node_info.sql  004_pod_host_ip.sql  005_workloads.sql  006_auth.sql  007_namespaced_rbac.sql  008_leases.sql  009_change_log.sql
src/: error.rs  lib.rs  main.rs  util.rs
src/db/: change_log.rs  lease.rs  mod.rs  repository.rs
src/models/: affinity.rs  auth.rs  daemonset.rs  deployment.rs  event.rs  meta.rs  mod.rs  namespace.rs  node.rs  pod.rs  service.rs  statefulset.rs
src/node/: agent.rs  mod.rs  proxy.rs  runtime.rs
src/node/network/: bridge.rs  ipam.rs  iptables.rs  mod.rs  veth.rs
src/node/oci/: bundle.rs  image.rs  mod.rs
src/node/runtime/: docker.rs  embedded.rs  mock.rs  mod.rs  wasm.rs
src/server/: api.rs  bus.rs  controller.rs  mod.rs  printers.rs  routes.rs  scheduler.rs  table.rs
