[package]
name = "superkube"
version = "0.1.0"
edition = "2021"
description = "A minimal Kubernetes-like platform in Rust"
authors = ["System32 AI"]
license = "MIT"

[[bin]]
name = "superkube"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"] }

# Serialization (K8s API compatible)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Container runtime
containerd-client = "0.5"
tonic = "0.11"
prost = "0.12"

# Embedded OCI runtime (image pull + bundle generation)
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.7"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

# HTTP client (for node agent -> server)
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# WebSocket
tokio-tungstenite = "0.24"

# Used by the runtime trait's log streaming type.
bytes = "1"

# Parse repeated query params (`?command=ls&command=-l`) so kubectl exec
# preserves all argv entries.
serde_urlencoded = "0.7"
# Pinned to a major that still builds on rustc 1.88; bump together with
# the workspace MSRV. wasmtime ≥ 41 requires rustc ≥ 1.91+.
wasmtime = { version = "33", features = ["async"] }
wasmtime-wasi = "33"
tokio-util = { version = "0.7.18", features = ["io"] }
# Bridges tokio::sync::broadcast / mpsc receivers into futures::Stream so the
# watch path can pipe live change events into an axum chunked body.
tokio-stream = { version = "0.1", features = ["sync"] }

# libcontainer (youki) drives namespaces / cgroups / pivot_root.
# Linux-only: it pulls in nix, libseccomp, etc. that don't build on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
# `systemd` is required whenever we run with a user namespace: libcontainer
# 0.5.7 forces the systemd cgroup driver in that case
# (`builder_impl.rs:91: systemd_cgroup: use_systemd || user_ns_config.is_some()`)
# and the code path is only available behind this feature.
libcontainer = { version = "0.5", default-features = false, features = ["v2", "systemd"] }
# Built-in mini-CNI: bridge + veth + IP setup via netlink, no host plugins.
rtnetlink = "0.14"
netlink-packet-route = "0.19"
nix = { version = "0.29", features = ["sched", "fs", "mount", "process"] }

# bollard talks to the host Docker daemon over /var/run/docker.sock.
# macOS-only: there, Docker Desktop runs the Linux VM that hosts containers.
# On Linux we'll use the embedded libcontainer runtime instead.
[target.'cfg(target_os = "macos")'.dependencies]
bollard = "0.17"

[dev-dependencies]
tokio-test = "0.4"
