[package]
name = "superkube"
version = "0.1.0"
edition = "2021"
description = "A minimal Kubernetes-like platform in Rust"
authors = ["System32 AI"]
license = "MIT"

[[bin]]
name = "superkube"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Web framework. Only the trace layer from tower-http is wired up.
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace"] }

# Async runtime. We narrow off `full` to the components we actually use:
#   rt-multi-thread + macros — `#[tokio::main]` and the multi-thread runtime
#   net + io-util            — TcpListener, async read/write helpers
#   sync + time              — broadcast/mpsc channels, sleeps & intervals
#   process + signal         — agent shells out and listens for SIGINT
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "process",
    "signal",
] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"] }

# Serialization (K8s API compatible)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Embedded OCI runtime: image pull (cross-platform: wasm runtime uses it)
# and tar/gzip layer extraction. Default features in reqwest pull in
# gzip/brotli/deflate which we don't use, so we strip them.
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
# Default tar features pull in `xattr` (~140 KB on disk) for unpacking
# extended attributes from layer tarballs. We don't read xattrs back
# anywhere, so the runtime cost of dropping it is "OCI images that bake
# SELinux/file caps lose them on extraction" — acceptable for our use.
tar = { version = "0.4", default-features = false }

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

# HTTP client (for node agent -> server). Drop default features to avoid
# pulling in gzip/brotli/deflate/charset code we never call.
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# WebSocket
tokio-tungstenite = "0.24"

# Used by the runtime trait's log streaming type.
bytes = "1"

# Parse repeated query params (`?command=ls&command=-l`) so kubectl exec
# preserves all argv entries.
serde_urlencoded = "0.7"
# Pinned to a major that still builds on rustc 1.88; bump together with
# the workspace MSRV. wasmtime ≥ 41 requires rustc ≥ 1.91+.
#
# Strip wasmtime down to what the runtime actually uses: a Cranelift JIT,
# async store/exec, the module cache, and pooling allocator. We drop
# component-model, GC, threads/stack-switching, wat parsing, profiling,
# and debug helpers — none of which are wired up.
wasmtime = { version = "33", default-features = false, features = [
    "runtime",
    "cranelift",
    "async",
    "cache",
    "pooling-allocator",
    "parallel-compilation",
] }
wasmtime-wasi = "33"
tokio-util = { version = "0.7.18", features = ["io"] }
# Bridges tokio::sync::broadcast / mpsc receivers into futures::Stream so the
# watch path can pipe live change events into an axum chunked body.
tokio-stream = { version = "0.1", features = ["sync"] }

# libcontainer (youki) drives namespaces / cgroups / pivot_root.
# Linux-only: it pulls in nix, libseccomp, etc. that don't build on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
# `systemd` is required whenever we run with a user namespace: libcontainer
# 0.5.7 forces the systemd cgroup driver in that case
# (`builder_impl.rs:91: systemd_cgroup: use_systemd || user_ns_config.is_some()`)
# and the code path is only available behind this feature.
libcontainer = { version = "0.5", default-features = false, features = ["v2", "systemd"] }
# Built-in mini-CNI: bridge + veth + IP setup via netlink, no host plugins.
rtnetlink = "0.14"
netlink-packet-route = "0.19"
nix = { version = "0.29", features = ["sched", "fs", "mount", "process"] }
# OCI runtime spec types — only used by the Linux-only bundle generator
# that feeds libcontainer.
oci-spec = "0.7"

# bollard talks to the host Docker daemon over /var/run/docker.sock.
# macOS-only: there, Docker Desktop runs the Linux VM that hosts containers.
# On Linux we'll use the embedded libcontainer runtime instead.
[target.'cfg(target_os = "macos")'.dependencies]
bollard = "0.17"

[dev-dependencies]
tokio-test = "0.4"

# Optimize the release binary for size. The defaults give us ~19MB; with
# fat LTO + opt-level="z" + a single codegen unit + panic=abort + strip we
# typically land around 6–8MB. Compile time goes up but ship-time only.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
